# C-Labs

./: LABA 1.cpp
LABA4/: LABA 4.cpp
LABA7/: CMakeLists.txt  Student.cpp  Student.h  StudentAfterFirstSession.cpp  StudentAfterFirstSession.h  StudentAfterSecondSession.cpp  StudentAfterSecondSession.h
LABA7/tests/: CMakeLists.txt  tests.cpp
LABA8/: CMakeLists.txt  Calculator.cpp  Calculator.h
Stack/: CMakeLists.txt  stack.cpp  stack.h
Stack on array/Stack on array main version/Stack_on_array/: CMakeLists.txt  Stack.h  main.cpp  stack.cpp
Stack/tests/: CmakeLists.txt  stack_tests.cpp
